2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Moonlight\MoonlightBuildExtension.cs: Track api
	  changes.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Moonlight\MoonlightBuildExtension.cs: Use the
	  new FilePath class for handling file and directory paths.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightParser.cs: Fix logic.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight.Gui/MoonlightOptionsPanelWidget.cs:
	* gtk-gui/MonoDevelop.Moonlight.Gui.MoonlightOptionsPanelWidget.cs:
	  Improve the moonlight options panel. Add support for setting
	  entry point.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightParser.cs: Implement
	  resolving types' namespaces.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightProject.cs: Use project name
	  for app entry point, since default namespace isn't
	  initalised during project creation.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Handle
	  respack.exe if the runtime gives us that.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Fix
	  dependency checks for respacked files.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Write
	  assembly error message to monitor's log.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Assembly
	  reference validation messages are empty, not null.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Fix
	  previous namespace fix.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Fix
	  deployment namespace handling.
