@@ -1,0 +1,14 @@
+<TargetFramework id="2.1" _name="Moonlight / Silverlight 2.0" clrVersion="Clr_2_1" SubsetOfFramework="3.5">
+<Assemblies>
+  <Assembly name="System" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+  <Assembly name="mscorlib" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+  <Assembly name="System.Core" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+  <Assembly name="System.Net" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+  <Assembly name="System.Runtime.Serialization" version="2.0.5.0" publicKeyToken="b77a5c561934e089" />
+  <Assembly name="System.ServiceModel" version="2.0.5.0" publicKeyToken="31bf3856ad364e35" />
+  <Assembly name="System.ServiceModel.Web" version="2.0.5.0" publicKeyToken="31bf3856ad364e35" />
+  <Assembly name="System.Windows" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+  <Assembly name="System.Windows.Browser" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+  <Assembly name="System.Xml" version="2.0.5.0" publicKeyToken="7cec85d7bea7798e" />
+</Assemblies>
+</TargetFramework>
